--- a/KarlMaster.WebUI/Areas/Admin/Views/_ViewImports.cshtml
+++ b/KarlMaster.WebUI/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using KarlMaster.WebUI
 @using KarlMaster.WebUI.Models
 @using KarlMaster.Entities.DTOs.CategoryDTOs
+@using KarlMaster.Entities.DTOs.ProductDTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
