--- a/KarlMaster.WebUI/Views/Auth/Register.cshtml
+++ b/KarlMaster.WebUI/Views/Auth/Register.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="container">
+﻿@model UserRegisterDTO
+
+
+<div class="container">
 
     <div class="card o-hidden border-0 shadow-lg my-5">
         <div class="card-body p-0">
@@ -12,34 +15,32 @@
                         <div class="text-center">
                             <h1 class="h4 text-gray-900 mb-4">Create an Account!</h1>
                         </div>
-                        <form class="user">
+                        <form method="post" class="user">
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input type="text" class="form-control form-control-user" id="exampleFirstName"
+                                    <input type="text" asp-for="FirstName"  class="form-control form-control-user" id="exampleFirstName"
                                            placeholder="First Name">
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="text" class="form-control form-control-user" id="exampleLastName"
+                                    <input type="text" asp-for="LastName" class="form-control form-control-user" id="exampleLastName"
                                            placeholder="Last Name">
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                                <input type="email" asp-for="Email" class="form-control form-control-user" id="exampleInputEmail"
                                        placeholder="Email Address">
                             </div>
                             <div class="form-group row">
                                 <div class="col-sm-6 mb-3 mb-sm-0">
-                                    <input type="password" class="form-control form-control-user"
+                                    <input type="password" asp-for="Password" class="form-control form-control-user"
                                            id="exampleInputPassword" placeholder="Password">
                                 </div>
                                 <div class="col-sm-6">
-                                    <input type="password" class="form-control form-control-user"
+                                    <input type="password" asp-for="PasswordRepeat" class="form-control form-control-user"
                                            id="exampleRepeatPassword" placeholder="Repeat Password">
                                 </div>
                             </div>
-                            <a href="login.html" class="btn btn-primary btn-user btn-block">
-                                Register Account
-                            </a>
+                            <input type="submit" value="Register Account" class="btn btn-primary btn-user btn-block" />
                             <hr>
                             <a href="index.html" class="btn btn-google btn-user btn-block">
                                 <i class="fab fa-google fa-fw"></i> Register with Google
@@ -53,7 +54,7 @@
                             <a class="small" href="forgot-password.html">Forgot Password?</a>
                         </div>
                         <div class="text-center">
-                            <a class="small" href="login.html">Already have an account? Login!</a>
+                            <a class="small" asp-controller="Auth" asp-action="Login">Already have an account? Login!</a>
                         </div>
                     </div>
                 </div>
