--- a/KarlMaster.WebUI/Views/Shared/Components/UserAuth/UserAuth.cshtml
+++ b/KarlMaster.WebUI/Views/Shared/Components/UserAuth/UserAuth.cshtml
@@ -1,5 +1,13 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model User
+
+
+<div id="userLogin" class="m-3">
+    <a class="m-2 userIcon" href="#">@Model.FirstName @Model.LastName</a>
+    <ul class="loginRegister">
+        <li class="sign-in-up"><a href="/auth/profile">Profile</a></li>
+        <li class="sign-in-up"><a href="/auth/logout">Logout</a></li>
+    </ul>
+</div>
+
+
+
